# logmover-remote

./: .gitignore  Cargo.toml  Rocket.toml  cleanup.sh  example-client-config.yaml  example-config.yaml  lib.rs  logmove-client.rs  logmove-server.rs  readme.md  release.sh  server.rs
lib/: configuration.rs  dir_search.rs  lib.rs  log_parse.rs  logging.rs  relocation.rs  relocation2.rs  renaming.rs
lib/types/: api_types.rs  configuration_types.rs  mod.rs  relocation_types.rs  search_types.rs
relocation/: mod.rs  relocation.rs
run-scripts/: logmove-client.bat  logmove-server.bat
tests/: clipboard-test.rs  colour-test.rs  config-test.rs  fuzzy-test.rs  logging-test.rs  logparse-test.rs  relocation-test.rs  relocation-test2.rs  renametest.rs  search-test.rs  serialise-test.rs  test.rs  test2.rs
