[package]
name="logmover-remote"
version="0.0.0"
edition="2018"

[lib]
name="logmover_remote"
path="lib/lib.rs"

[[bin]]
name="logmove-server"
path="logmove-server.rs"

[[bin]]
name="logmove-client"
path="logmove-client.rs"

[dependencies]
chrono="0.4"
colored="2.0.0"
rocket="0.4.7"
rocket_contrib={version="0.4.7",features=["json"]}
http="0.2.3"
reqwest={version="0.11.1",features=["blocking","json"]}
serde={version="1.0.124",features=["derive"]}
serde_json="1.0.64"
tokio={version="1.2.0",features=["macros"]}
clipboard-win="4.0.3"

# TESTING
[[bin]]
name="relocatetest"
path="tests/relocation-test.rs"

[[bin]]
name="clipboardtest"
path="tests/clipboard-test.rs"