[package]
name="logmover-remote"
version="1.0.0"
edition="2018"

[lib]
name="logmover_remote"
path="lib/lib.rs"

[[bin]]
name="logmove-server"
path="logmove-server.rs"

[[bin]]
name="logmove-client"
path="logmove-client.rs"

[dependencies]
colored="2.0.0"
rocket="0.4.7"
rocket_contrib={version="0.4.7",features=["json"]}
http="0.2.3"
reqwest={version="0.11.1",features=["blocking","json"]}
serde={version="1.0.124",features=["derive"]}
serde_json="1.0.64"
serde_yaml="0.8.17"
tokio={version="1.2.0",features=["macros"]}
clipboard-win="4.0.3"
regex="1.4.3"
lazy_static="1.4.0"
tempfile="3.2.0"
yansi="0.5.0"
sublime_fuzzy="0.7.0"

# TESTING
[[bin]]
name="searchtest"
path="tests/search-test.rs"

[[bin]]
name="fuzzytest"
path="tests/fuzzy-test.rs"

# [[bin]]
# name="relocatetest"
# path="tests/relocation-test.rs"

# [[bin]]
# name="clipboardtest"
# path="tests/clipboard-test.rs"

# [[bin]]
# name="logparsetest"
# path="tests/logparse-test.rs"

# [[bin]]
# name="relocatetest2"
# path="tests/relocation-test2.rs"

# [[bin]]
# name="logtest"
# path="tests/logging-test.rs"

# [[bin]]
# name="logtest2"
# path="tests/test.rs"

# [[bin]]
# name="test2"
# path="tests/test2.rs"

# [[bin]]
# name="configtest"
# path="tests/config-test.rs"

# [[bin]]
# name="colourtest"
# path="tests/colour-test.rs"